...
import com.github.swent.swisstravel.ui.tripcreation.TripFirstDestinationsTestTags.NEXT_BUTTON
import com.github.swent.swisstravel.ui.tripcreation.TripFirstDestinationsTestTags.RETURN_BUTTON
import java.util.UUID

/** Object containing test tags for the [FirstDestinationScreen] composable. */
object TripFirstDestinationsTestTags {
  const val FIRST_DESTINATIONS_TITLE = "first_destinations_title"
  const val ADD_FIRST_DESTINATION = "add_first_destination"
  const val NEXT_BUTTON = "next_button"
  const val RETURN_BUTTON = "return_button"
}

private const val MAX_DESTINATIONS = 9

/**
 * Wrapper for a destination location with a unique ID to ensure UI consistency when removing items.
...
