...
import java.time.format.DateTimeFormatter
import kotlinx.coroutines.flow.collectLatest

/** Test tags for UI tests to identify components. */
object TripDateTestTags {
  const val NEXT = "next"
  const val TRIP_DATE_SCREEN = "tripDateScreen"
}

/**
 * Screen where users can set the start and end dates for their trip.
 *
 * @param viewModel ViewModel to handle the trip settings logic.
...
